--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "axios": "0.27.2",
+    "bch-encrypt-lib": "2.1.1",
     "bch-message-lib": "2.2.1",
+    "bch-nostr": "1.3.4",
     "bootstrap": "5.2.0",
+    "crypto-browserify": "3.12.1",
+    "nostr-tools": "2.10.4",
+    "process": "0.11.10",
     "qrcode.react": "4.2.0",
     "query-string": "7.1.1",
     "react": "19.0.0",
@@ -17,14 +22,16 @@
     "react-dom": "19.0.0",
     "react-router-dom": "7.1.3",
     "react-scripts": "5.0.1",
+    "stream-browserify": "3.0.0",
     "use-local-storage-state": "19.5.0",
-    "use-query-params": "1.2.3"
+    "use-query-params": "1.2.3",
+    "vm-browserify": "1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "standard --env mocha --fix",
     "pub": "node deploy/publish-main.js",
     "pub:ghp": "./deploy/publish-gh-pages.sh"
@@ -45,8 +52,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "minimal-slp-wallet": "5.13.1",
+    "react-app-rewired": "2.2.1",
     "standard": "17.0.0",
     "web3.storage": "4.3.0"
+  },
+  "overrides": {
+    "nostr-tools": {
+      "typescript": "4.9.5"
+    }
   }
 }
